fix: 로컬 sbt 실행을 위한 Spark 런타임 설정 보완